# xdelta3-node

./: .gitignore  .gitmodules  .npmignore  CONTRIBUTING.md  Cargo.toml  README.md  index.d.ts  index.js  node-zigar.config.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: CI.yml  test.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: patch_xdelta3.sh
src/: index.ts  lib.rs
test/unit/: index.test.ts
types/node-zigar/: index.d.ts
zig/: build.zig  build.zig.zon  xdelta3-node.zig  xdelta3.zig
